add travis integration

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
   </header>
   <nav class="nav">
     <ul>
-      <li><a target="_blank" rel="noopener noreferrer" href="https://acarrara.github.io/sketch-beamer">GitHub</a></li>
+      <li><a target="_blank" rel="noopener noreferrer" href="https://github.com/acarrara/sketch-beamer">GitHub</a></li>
       <li><a target="_blank" rel="noopener noreferrer" href="https://www.npmjs.com/package/sketch-beamer">Npm</a></li>
     </ul>
   </nav>
